<resources>
    <string name="app_name">QRTracker</string>
    <string name="txBienvenido">Bienvenido</string>
    <string name="txIDOfficial"> ID Funcionario</string>
    <string name="btIngresar">Ingresar</string>
    <string name="title_activity_main">QRTracker</string>
    <string name="title_qr">QR</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_List">List</string>
    <string name="listPackage_ID"> ID </string>
    <string name="listPackage_Description"> Description </string>
    <string name="listPackage_State"> State </string>
    <string name="txIDPaquete">ID Paquete</string>
    <string name="txHourMonitor">Hour</string>
    <string name="txDateMonitor">Monitor</string>
    <string name="txLong">Longuitud</string>
    <string name="txAlt">Altitud</string>
    <string name="txLat">Latitud</string>
    <string name="btMonitor">Enviar</string>
</resources>
